
    cdecl> set c23
    cdecl> typedef int Int
    cdecl> show
    typedef int Int;
    cdecl> set c17
    cdecl> typedef int Int        # Already exists so did nothing.
    cdecl> show                   # Would NOT show anything.
    cdecl>

Now the second `typedef` would update `Int` to make it available in C17 and
newer so the second `show` would show it.


* Changes in Cdecl 16.2.2

** `long long` not until C++11
Previously, **cdecl** allowed `long long` in C++98 and C++03, but it wasn't
officially supported until C++11.  Now, **cdecl** allows `long long` in C++
only since C++11.


* Changes in Cdecl 16.2.1

** Fixed macro argument list memory leak
Fixed said leak.


* Changes in Cdecl 16.2

** Partial `typeof` support
Both `typeof` and `typeof_unqual` in C23 are partially supported in that types
are accepted (but expressions are not):

    typeof(int*) x                // supported
    typeof(x) y                   // not supported

Additionally, GNU's `__typeof__` is a synonym for `typeof`.


* Changes in Cdecl 16.1

** `explicit-ecsu` in English
The value of the `explicit-ecsu` option now also applies in pseudo-English.
Previously:

    c++decl> class C
    c++decl> explain C *p
    declare p as pointer to C

Now (with `explicit-ecsu` containing `c`):

    c++decl> class C
    c++decl> set explicit-ecsu = csu
    c++decl> explain C *p
    declare p as pointer to class C

** Leading/trailing whitespace stringification
Previously:

    #define Q2(A,B,C)  #B
    expand Q2(, a b ,)

incorrectly returned `" a b "` whereas now it correctly returns `"a b"`.


* Changes in Cdecl 16.0

** Macro expansion
Cdecl now allows you to `#define` macros and `expand` them step-by-step.

** C99 with extension error messages
Improved C99 with extension error messages.

** `--disable-cdecl-debug` removed
The `--disable-cdecl-debug` `configure` option has been removed (which means
**cdecl** debug output is always compiled in).

** `GCC_COLORS`