@@ -239,5 +239,13 @@ expand __cplusplus
 set c++23
 expand __cplusplus
 
+////////// Miscellaneous //////////////////////////////////////////////////////
+
+// Test that macro names are treated as ordinary names in non-preprocessor
+// contexts since cdecl doesn't support the use of macro names everywhere.
+
+#define ARRAY_MAX                 5
+explain int a[ ARRAY_MAX ]
+
 END
 # vim:set et sw=2 ts=2:
